# millmill

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.github/workflows/: rust.yml
docs/: CONTRIBUTING.md  CONTRIBUTING_ja.md  README.md  README_ja.md
src/: app.rs  components.rs  gantt_chart.rs  home.rs  main.rs  route.rs  styles.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
