[package]
name = "millmill-ui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
horrorshow = "0.8.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
stylist = { version = "0.13.0", features = ["yew_integration"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d","HtmlCanvasElement",] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
chrono = "0.4" # 日付計算用
gloo-events = "0.2" # JavaScript イベント管理
gloo ="0.11.0"
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
yew-hooks = "0.3.3"
log = "0.4.27"

[workspace]
members = ["src-tauri"]
